BUG#28026 - Falcon: crash if partitions and select for update

Assertion failure may happen with falcon + partition + select for
update. This may affect other engines as well.

Though assertion failure is fixed with this patch, falcon still
deadlocks when running falcon_bug_28026.test.